# ebur128

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.lock.msrv  Cargo.toml  LICENSE  README.md  build.rs
.github/workflows/: ebur128.yml
assets/: ebur128.h
benches/: calc_gating_block.rs  ebur128.rs  filter.rs  history.rs  interp.rs  true_peak.rs
capi-test/: Makefile  capi-test.c
examples/: generate_histogram_bins.rs  normalize.rs  replaygain.rs
src/: capi.rs  ebur128.rs  ffi.rs  filter.rs  histogram_bins.rs  history.rs  interp.rs  lib.rs  true_peak.rs  utils.rs  wasm.rs
src/c/: ebur128.c  ebur128.h  version.txt
src/c/tests/: filter.c  interp.c
tests/: reference_tests.rs
tests/c/: calc_gating_block.c  filter.c  history.c  true_peak.c  version.txt
