[package]
name = "ebur128"
version = "0.1.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
categories = ["multimedia"]
keywords = ["multimedia", "audio", "dsp"]
description = "Implementation of the EBU R128 loudness standard"
repository = "https://github.com/sdroege/ebur128"
homepage = "https://github.com/sdroege/ebur128"
license = "MIT"
readme = "README.md"

[dependencies]
bitflags = "1.0"
lazy_static = "1.0"

[build-dependencies]
cc = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
float-cmp = "0.8"
ebur128-c = { package = "ebur128", version = "=0.1.1" }
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"

[features]
internal-tests = []
c-tests = ["cc", "internal-tests"] # and ebur128-c, quickcheck, quickcheck_macros, rand but dev-dependencies can't be optional...

[[bench]]
name = "interp"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "true_peak"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "history"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "filter"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "calc_gating_block"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "ebur128"
harness = false

[profile.dev]
opt-level = 1
