[package]
name = "ebur128"
version = "0.1.1"
authors = ["Sebastian Dröge <sebastian@centricular.com>"]
edition = "2018"
categories = ["multimedia"]
keywords = ["multimedia", "audio", "dsp"]
description = "Implementation of the EBU R128 loudness standard"
repository = "https://github.com/sdroege/ebur128"
homepage = "https://github.com/sdroege/ebur128"
license = "MIT"
readme = "README.md"

[dependencies]
bitflags = "1.0"

[build-dependencies]
cc = { version = "1.0", optional = true }

[dev-dependencies]
criterion = "0.3"
float_eq = "0.5"
ebur128-c = { package = "ebur128", version = "=0.1.1" }
quickcheck = "0.9"
quickcheck_macros = "0.9"
rand = "0.7"
hound = "3"

[features]
internal-tests = []
c-tests = ["cc", "internal-tests"] # and ebur128-c, quickcheck, quickcheck_macros, rand but dev-dependencies can't be optional...
reference-tests = []
capi = []

[lib]
name = "ebur128"

[package.metadata.capi]
min_version = "0.6.12"

[package.metadata.capi.header]
name = "ebur128.h"
subdirectory = false
generation = false

[package.metadata.capi.pkg_config]
name = "libebur128"
description = "some description"
version = "1.2.4"

[package.metadata.capi.library]
name = "ebur128"
version = "1.2.4"

[[bench]]
name = "interp"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "true_peak"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "history"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "filter"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "calc_gating_block"
harness = false
required-features = ["internal-tests"]

[[bench]]
name = "ebur128"
harness = false

[[test]]
name = "reference_tests"
required-features = ["reference-tests"]

[profile.dev]
opt-level = 1
